@@ -21,6 +21,8 @@ Some minor changes done.
 
 Some changes that should have been added 2 commits ago :-(
 
+Modules queriesManager and queryDlg have been renamed accordingly to PEP 8.
+
 ** September 28, 2013 **
 The package vtWidgets has been renamed accordingly to PEP 8.
 
